examples/outputs/multi_error.err
error[TYPE_MISMATCH]: Type mismatch
  --> examples/multi_error.casa:12:15
   |
12 |     "hello" 2 *
   |               ^
  Expected: int
  Got: str

error[SIGNATURE_MISMATCH]: Invalid signature for function `too_many`
  --> examples/multi_error.casa:6:4
  |
6 | fn too_many int -> int {
  |    ^^^^^^^^

error[STACK_MISMATCH]: Branches have incompatible stack effects
  --> examples/multi_error.casa:27:5
   |
27 |     fi
   |     ^^

error[INVALID_VARIABLE]: Cannot override local variable `count` of type `int` with other type `str`
  --> examples/multi_error.casa:18:14
   |
18 |     "oops" = count
   |              ^^^^^

Found 4 error(s).
